--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
             <ul class="head">
                 
                 <li class="hh">WELCOME</li>
-                <li><a href="">Home</a></li>
-                <li><a href="">Hair</a></li>
-                <li><a href="">Skin Care</a></li>
-                <li><a href="">Make Up</a></li>
-                <li><a href="">Bridal</a></li>
-                <li><a href="">Essentials</a></li>
-                <li><a href="">Locations</a></li>
-                <li><a href="">Instagram</a></li>
+               <li><a href="https://arnon-1314.github.io/LE-SHIVEN/">Home</a></li>
+                <li><a href="https://arnon-1314.github.io/LE-SHIVEN-HAIR/">Hair</a></li>
+                <li><a href="https://arnon-1314.github.io/skincare/">Skin Care</a></li>
+                <li><a href="https://arnon-1314.github.io/makeup/">Make Up</a></li>
+                <li><a href="https://arnon-1314.github.io/bridal/">Bridal</a></li>
+                <li><a href="https://arnon-1314.github.io/essential/">Essentials</a></li>
+                <li><a href="https://maps.app.goo.gl/b1dEdmHUL7Gy6MVGA?g_st=ac">Locations</a></li>
+                <li><a href="https://www.instagram.com/bhavnatulsiyani_makeover?igsh=N2h6bnRpNDluZDJq">Instagram</a></li>                       
             </ul>
         </nav>
         </span>
@@ -101,12 +101,11 @@
     </div>
     <div class="services">
         <h1>SERVICES</h1><br><br>
-        <a href="">HAIR</a><br><br>
-        <a href="">ESSENTAIL</a><br><br>
-        <a href="">SKIN CARE</a><br><br>
-        <a href="">BRIDAL</a><br><br>
-        <a href="">MAKE-UP</a><br><br>
-  
+        <a href=https://arnon-1314.github.io/LE-SHIVEN-HAIR/">HAIR</a><br><br>
+        <a href="https://arnon-1314.github.io/essential/">ESSENTAIL</a><br><br>
+        <a href="https://arnon-1314.github.io/skincare/">SKIN CARE</a><br><br>
+        <a href="https://arnon-1314.github.io/bridal/">BRIDAL</a><br><br>
+        <a href="https://arnon-1314.github.io/makeup/">MAKE-UP</a><br><br>  
     </div>
     
     </div> 
